Project

General

Profile

Actions

Bug #59833

open

crash: void MDLog::trim(int): assert(segments.size() >= pre_segments_size)

Added by Telemetry Bot about 1 year ago. Updated 7 months ago.

Status:
Pending Backport
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Telemetry
Tags:
standby-replay, crash backport_processed
Backport:
reef,quincy,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
crash
Pull request ID:
Crash signature (v1):

841fe8275c2ac2335993c7605d87c8dabe1400f2e0ce343bfa84b270a8022c81
c610716788b1a612d83954ca8010e67d09d1732361cdbee218a35ea86326ab1f
eeb88a7d24db5597d036a72f57497aa8ffbc76621f2bfffcd9f8fc8c464d5136
f58def719b94914e85f5b8d056e6c1f790bd3611ed6bd539b657c3655b9602f9
fe22b21216f6871aaa55ecaa7f525b21b2f5c92d035289ca584270ea688c422c


Description

http://telemetry.front.sepia.ceph.com:4000/d/jByk5HaMz/crash-spec-x-ray?orgId=1&var-sig_v2=21725944feb692959f706d0fbba1b5b2bb997a7eeb01b1ac4fb944052c3d7c98

Assert condition: segments.size() >= pre_segments_size
Assert function: void MDLog::trim(int)

Sanitized backtrace:

    MDLog::trim(int)
    MDSRankDispatcher::tick()
    Context::complete(int)
    CommonSafeTimer<ceph::fair_mutex>::timer_thread()
    CommonSafeTimerThread<ceph::fair_mutex>::entry()

Crash dump sample:
{
    "assert_condition": "segments.size() >= pre_segments_size",
    "assert_file": "mds/MDLog.cc",
    "assert_func": "void MDLog::trim(int)",
    "assert_line": 631,
    "assert_msg": "mds/MDLog.cc: In function 'void MDLog::trim(int)' thread 7f6739f0e700 time 2023-04-27T01:42:18.629735+0000\nmds/MDLog.cc: 631: FAILED ceph_assert(segments.size() >= pre_segments_size)",
    "assert_thread_name": "safe_timer",
    "backtrace": [
        "/lib64/libpthread.so.0(+0x12ce0) [0x7f6743136ce0]",
        "gsignal()",
        "abort()",
        "(ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x1b0) [0x7f6744156cd2]",
        "/usr/lib64/ceph/libceph-common.so.2(+0x283e95) [0x7f6744156e95]",
        "(MDLog::trim(int)+0xe6b) [0x56208e23eafb]",
        "(MDSRankDispatcher::tick()+0x296) [0x56208df25856]",
        "(Context::complete(int)+0xd) [0x56208df0200d]",
        "(CommonSafeTimer<ceph::fair_mutex>::timer_thread()+0x18b) [0x7f674426a41b]",
        "(CommonSafeTimerThread<ceph::fair_mutex>::entry()+0x11) [0x7f674426c421]",
        "/lib64/libpthread.so.0(+0x81ca) [0x7f674312c1ca]",
        "clone()" 
    ],
    "ceph_version": "17.2.3",
    "crash_id": "2023-04-27T01:42:18.716726Z_7bea07a7-9aa6-480e-abe7-ed927f948acb",
    "entity_name": "mds.d38640925fca5c508bc2ecfdd5876955f1ec6878",
    "os_id": "centos",
    "os_name": "CentOS Stream",
    "os_version": "8",
    "os_version_id": "8",
    "process_name": "ceph-mds",
    "stack_sig": "fe22b21216f6871aaa55ecaa7f525b21b2f5c92d035289ca584270ea688c422c",
    "timestamp": "2023-04-27T01:42:18.716726Z",
    "utsname_machine": "x86_64",
    "utsname_release": "3.10.0-1160.42.2.el7.x86_64",
    "utsname_sysname": "Linux",
    "utsname_version": "#1 SMP Tue Sep 7 14:49:57 UTC 2021" 
}


Related issues 3 (1 open2 closed)

Copied to CephFS - Backport #63173: pacific: crash: void MDLog::trim(int): assert(segments.size() >= pre_segments_size)ResolvedVenky ShankarActions
Copied to CephFS - Backport #63174: reef: crash: void MDLog::trim(int): assert(segments.size() >= pre_segments_size)ResolvedVenky ShankarActions
Copied to CephFS - Backport #63175: quincy: crash: void MDLog::trim(int): assert(segments.size() >= pre_segments_size)In ProgressVenky ShankarActions
Actions #1

Updated by Telemetry Bot about 1 year ago

  • Crash signature (v1) updated (diff)
  • Crash signature (v2) updated (diff)
  • Affected Versions v17.2.0, v17.2.3, v17.2.4, v17.2.5 added
Actions #2

Updated by Milind Changire 11 months ago

  • Assignee set to Dhairya Parmar
  • Crash signature (v1) updated (diff)
Actions #3

Updated by Venky Shankar 10 months ago

  • Status changed from New to Fix Under Review
  • Assignee changed from Dhairya Parmar to Venky Shankar
  • Tags set to standby-replay, crash
  • Backport set to reef,quincy,pacific
  • Pull request ID set to 52755
  • Component(FS) MDS added
  • Labels (FS) crash added
Actions #4

Updated by Venky Shankar 7 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Backport Bot 7 months ago

  • Copied to Backport #63173: pacific: crash: void MDLog::trim(int): assert(segments.size() >= pre_segments_size) added
Actions #6

Updated by Backport Bot 7 months ago

  • Copied to Backport #63174: reef: crash: void MDLog::trim(int): assert(segments.size() >= pre_segments_size) added
Actions #7

Updated by Backport Bot 7 months ago

  • Copied to Backport #63175: quincy: crash: void MDLog::trim(int): assert(segments.size() >= pre_segments_size) added
Actions #8

Updated by Backport Bot 7 months ago

  • Tags changed from standby-replay, crash to standby-replay, crash backport_processed
Actions

Also available in: Atom PDF