mds: adjust pre_segments_size for MDLog when trimming segments for standby-replay

Otherwise, trimming mdlog during shutdown can result in the number of
segments lagging pre_segments_size (the number of segments processed
during replay).

Fixes: http://tracker.ceph.com/issues/59833
Signed-off-by: Venky Shankar <vshankar@redhat.com>